# Gogluha-Phone_Struct

./: 1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt  README.md  VECTORANDSTRING.cpp  algoritmA.cpp  calendar.cpp  cmake.txt  ferz.cpp  file.cpp  for.cpp  let2.cpp  logarifm.cpp  mes9c.cpp  passwords.cpp  phone.cpp  soundex.cpp  summcifr.cpp  testswitch.cpp  treygolnik.cpp  vectorpass.cpp  visgod.cpp  while.cpp
vector_hw/: bmstu_vector.h  hw1_tests.cpp  raw_memory.h
